[gd_scene load_steps=6 format=2]

[ext_resource path="res://Floor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Robo/Robo.tscn" type="PackedScene" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://TextureProgress.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Star.tscn" type="PackedScene" id=5]

[node name="World" type="Node"]
script = ExtResource( 3 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TextureProgress" parent="HUD" instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -130.0
margin_top = 27.0
margin_right = 131.0
margin_bottom = 67.0

[node name="StarLabel" type="Label" parent="HUD"]
margin_left = 32.1427
margin_top = 20.7982
margin_right = 72.1427
margin_bottom = 34.7982
text = "Stars: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Floor" type="Node2D" parent="."]

[node name="Floor1" parent="Floor" instance=ExtResource( 1 )]

[node name="Floor22" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 704.663, 269.58 )

[node name="Floor2" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2841.18, 540.699 )

[node name="Floor3" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 3972.55, 559.05 )

[node name="Floor4" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 6741.05, 497.464 )

[node name="Floor5" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 10488.8, 162.333 )

[node name="Floor6" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 9962.73, 200.378 )

[node name="Floor7" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 8363.52, 338.876 )

[node name="Floor8" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 5107.16, 630.227 )

[node name="Floor9" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 9460.67, 249.893 )

[node name="Floor10" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 11047, 23.7368 )

[node name="Floor11" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 8917.8, 304.655 )

[node name="Floor12" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 4547.67, 594.772 )

[node name="Floor13" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 6194.37, 543.466 )

[node name="Floor14" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 5642.54, 579.253 )

[node name="Floor15" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 7827.63, 390.496 )

[node name="Floor16" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 7275.69, 449.821 )

[node name="Floor17" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 3412.29, 520.583 )

[node name="Floor18" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1145.3, 439.188 )

[node name="Floor21" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 280.387, 184.296 )
rotation = 1.5708

[node name="Floor19" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 2284.98, 511.622 )

[node name="Floor20" parent="Floor" instance=ExtResource( 1 )]
position = Vector2( 1717.84, 475.491 )

[node name="collectibles" type="Node" parent="."]

[node name="Star1" parent="collectibles" instance=ExtResource( 5 )]
position = Vector2( 876.565, 393.068 )

[node name="Robo" parent="." groups=[
"save_me",
] instance=ExtResource( 2 )]
position = Vector2( 435, 320 )

[node name="AutosaveTimer" type="Timer" parent="."]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 587.193, 363.5 )

[node name="EndPosition" type="Position2D" parent="."]
position = Vector2( 11049.1, -88.5776 )
[connection signal="timeout" from="AutosaveTimer" to="." method="_on_AutosaveTimer_timeout"]
